# die-macher

./: .gitignore  .pre-commit-config.yaml  TODO.md
.github/workflows/: pipeline.yml  raspi_workflow.yml  system_1_workflow.yml  system_2_workflow.yml  system_3_workflow.yml
app/raspi/: .gitignore  .pylintrc  README.md  coverage.xml  docker-compose.yml  main.py  pyproject.toml  sonar-project.properties  test-results.xml
app/raspi/modules/opc_ua/: __init__.py  server.py
app/raspi/modules/tcp_ip/: CameraStreamer.py  CommandHandler.py  Dockerfile  WebcamServer.py  __init__.py  camera_streamer.py  command_handler.py  connection.py  main.py  server.py  test_camera.py  webcam_server.py
app/raspi/scripts/: build.bat  format.bat  lint.bat  start.bat  test.bat
app/raspi/tcp_ip/: docker-compose.yml
app/raspi/tcp_ip/app/: main.py  test_camera.py
app/raspi/test_opcua_server/opcua_certs/: server-cert.pem  server-key.pem
app/raspi/test_opcua_server/server/: server.py
app/raspi/tests/: __init__.py  conftest.py  test_camera_streamer.py  test_command_handler.py  test_connection.py  test_main.py  test_opc_ua_server.py  test_server.py  test_webcam_server.py
app/system_1/: .gitignore  pom.xml  sonar-project.properties
app/system_1/src/main/java/com/die_macher/: System1Application.java
app/system_1/src/main/java/com/die_macher/awattar/: package-info.java
app/system_1/src/main/java/com/die_macher/common/: package-info.java
app/system_1/src/main/java/com/die_macher/config/: AppConfig.java
app/system_1/src/main/java/com/die_macher/dobot/: DobotCommunicationException.java  DobotInstance.java  DobotProperties.java  package-info.java
app/system_1/src/main/java/com/die_macher/opcua_client/: OpcuaClientApplication.java  OpcuaConnectionManager.java  OpcuaSecurityException.java  SensorData.java  (+3 more)
app/system_1/src/main/java/com/system_1/: System1Application.java
app/system_1/src/main/resources/: application.properties
app/system_1/src/test/java/com/die_macher/: ModularityTest.java  ModularityTests.java  System1ApplicationTest.java  System1ApplicationTests.java
app/system_1/src/test/java/com/system_1/: System1ApplicationTests.java
app/system_1/tests/: test_opcua_client_connection.py
app/system_2/: .gitignore  README.md  docker-compose.yaml  pom.xml  sonar-project.properties
app/system_2/docker/node-red/data/flows/: .flows.json.backup  flows.json
app/system_2/src/main/java/com/die_macher/: System2Application.java
app/system_2/src/main/resources/: application.properties
app/system_2/src/test/java/com/die_macher/: System2ApplicationTests.java
app/system_3/: .prettierrc  eslint.config.mjs  package-lock.json  package.json  sonar-project.properties
app/system_3/src/app/: layout.tsx
app/system_3/src/app/dashboard/: page.tsx
app/system_3/src/app/price/: page.tsx
app/system_3/src/app/robot/: page.tsx
app/system_3/src/app/sensor/: page.tsx
app/system_3/src/components/: active-theme.tsx  app-sidebar.tsx  chart-area-interactive.tsx  data-table.tsx  mqtt-status.tsx  nav-main.tsx  section-cards.tsx  site-header.tsx  theme-selector.tsx
app/system_3/src/components/ui/: sidebar.tsx
app/system_3/src/hooks/: use-mqtt.ts
app/system_3/src/providers/: mqtt-provider.tsx
app/system_3/src/services/mqtt/: config.ts  topic-handlers.ts
app/system_3/src/store/: index.ts
app/system_3/src/store/selector/: price.ts  robot.ts  sensor.ts
app/system_3/src/store/slices/: mqtt-slice.ts  price-slice.ts  robot-slice.ts  sensor-slice.ts
app/system_3/src/types/: data.ts
ci/: SETUP.md  docker-compose.yml
docs/: 00_Regeln_und_Inbetriebnahme.md  01_Projektübersicht.md  02_Systemarchitektur.md  03_Datenfluss_und_Kommunikation.md  04_Komponenten_System1.md  05_System2_Architektur_und_Setup.md  12_Backlog_und_Tasks.md  14_Dobot_Board_Koordinaten.md  14_OpcUA_Client_Certificate_Setup.md  15_Awattar_Marketdata.md  15_OpcUA_Client_Implementation.md  16_Dobot_Board_Koordinaten.md  16_OpcUA_Server_Certificate_Setup.md  17_Awattar_Marktdaten.md  README.md
(+258 files in other folders)
